Построить Учеников и Группы (students-groups)
Появилась первая область личного контура — ru.locus.student. Ученик —
карточка из имени и владельца, без учётной записи, имени входа и пароля:
StudentIsNotAUserTest проверяет и состав таблицы student, и что вход
именем Ученика отклоняется как несуществующее имя. Группа — именованный
список Учеников того же Учителя; имя Группы у одного владельца неповторимо
без учёта регистра (индекс на lower(name), как у словарей), имена Учеников
свободны — однофамильцы обычны. Ведёт обоих Учитель, и только своих;
Администратор без роли Учителя получает 403 на списке, карточке и каждой
операции. Экраны /students и /groups: список с заведением, карточка
с переименованием и удалением, у Группы — состав галочками по всем Ученикам
владельца; главная страница получила ссылки для Учителя.

Правило ADR-0027 стало принудительным. У StudentRepository и GroupRepository
нет метода без UserId, и это сторожит OwnerIsRequiredByStudentsTest —
зеркало тестов OwnerIsUnknownTo… у библиотечных областей. Владельца
подставляет сервис из CurrentUser; контроллеры UserId не читают и не
передают (StudentControllerIsThinTest). Принадлежность Группы и её Учеников
одному владельцу держится в схеме: group_student несёт user_id и составные
внешние ключи на (id, user_id) обеих таблиц, так что чужой Ученик не попадает
в Группу и в обход сервиса. Признак готовности — StudentsAreFilteredByOwnerTest:
Учитель А не получает Учеников и Групп Учителя Б ни списком, ни по прямому
адресу (404, как несуществующий), ни правкой, ни включением чужого Ученика
в свою Группу, а /taxonomy и /problems показывают обоим одну и ту же Задачу
и один и тот же материал. Тестовая оснастка: LoggedIn.as(account) входит
настоящей учётной записью, чтобы CurrentUser.id() отдавал UserId.

Сверх карточки решено: Ученик удаляется, пока на него ничего не ссылается,
Группа — в любой момент (ADR-0035). Вопрос «на что ссылается Ученик» —
StudentUsage по образцу ProblemUsage; удаление Ученика вычёркивает его